--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a href="https://www.youtube.com/@ffoxara" class="icon" data-tooltip="Subscribers: 2k+" target="_blank">
                 <i class="fab fa-youtube"></i>
             </a>
-            <a href="https://discord.com/invite/2JhtBs4TqH" class="icon" target="_blank">
+            <a href="https://discord.gg/mkPjzMqN4z" class="icon" target="_blank">
                 <i class="fab fa-discord"></i>
             </a>
             <!-- TikTok Icon with Live Bubble -->
